# fast-mcp

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_mcp.py  test_mcp.py
.cursor/rules/: fastapi-fastmcp-stack.mdc
app/: main.py  mcp_server.py
app/ai/: agent.py
app/api/: route_v1.py
app/core/: config.py  interceptors.py
app/mcp/: friend_mcp.py  mcp_interceptor.py  mcp_server.py  weather_mcp.py
app/vector/: qdrant.py  simple_qdrant.py
tests/: mcpt.py  test_main.py  test_mcp.py
